# urusai

./: .dockerignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  sqlx-data.json
migrations/: 20220508085840_database.sql
src/: config.rs  handler.rs  main.rs  schema.sql  tts.rs
