[package]
name = "urusai"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "sqlite", "offline" ] }
serde_json = "1.0.81"
serde = "1.0.137"
dotenv = "0.15.0"
lazy_static = "1.4.0"
anyhow = "1.0.57"
pretty_env_logger = "0.4.0"
log = "0.4.17"
reqwest = { version = "0.11.10", features = [ "json" ] }
base64 = "0.13.0"
bytes = "1.1.0"
serenity = {version = "0.11.1", features = ["client", "standard_framework", "voice", "rustls_backend"]}

[dependencies.songbird]
git = "https://github.com/serenity-rs/songbird"
features = ["builtin-queue"]
branch = "next"


[dependencies.tokio]
version = "1.18.1"
features = ["rt-multi-thread", "full"]

[patch."https://github.com/serenity-rs/serenity"]
serenity = { version = "0.11.1" }